[package]
name = "src_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
dotenvy = "0.15"
urlencoding = "2.1"
plotters = "0.3.7"
serde_json = "1.0.145"
rand = "0.10.0-rc.0"
itertools = "0.14.0"
petgraph = "0.8.3"